--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -871,7 +871,7 @@
     max-width: 600px;
     margin: 0 auto;
     padding: 40px;
-    
+    background-color: #fff;
     border-radius: var(--border-radius);
     box-shadow: var(--box-shadow);
   }
