--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -885,6 +885,7 @@
     margin-bottom: 8px;
     font-weight: 500;
   }
+
   
   .form-group input,
   .form-group textarea,
@@ -924,28 +925,49 @@
   }
   
   .auth-container {
-    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 40px 20px;
-    background-color: var(--bg-light);
-    background-image: url('https://www.transparenttextures.com/patterns/rice-paper-3.png');
+    padding: 0;
+    
   }
   
   .auth-form {
-    width: 100%;
-    max-width: 400px;
-    padding: 40px;
-    background-color: #fff;
-    border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow);
+    width: 420px;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .2);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    color: #fff;
+    border-radius: 10px;
+    padding: 30px 40px;
+    opacity: 10px;
+    backdrop-filter: blur(5px);
+    margin-top: -30px;
+  }
+
+  .auth-form .logo {
+    margin-left: -20px;
+    text-shadow: 
+    3px 3px 0px rgba(0, 0, 0, 0.6),
+    0 0 20px rgba(255, 255, 255, 0.4),
+    0 0 30px rgba(249, 109, 0, 0.3);
+    letter-spacing: 1px;
+    font-weight: 800;
+    font-size: 2.5rem;
   }
   
   .auth-form h2 {
     text-align: center;
     margin-bottom: 30px;
-    color: var(--text-dark);
+   
+    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.8);
+    color: #FFFFFF;
+    font-weight: 500;
+    text-shadow: 
+      2px 2px 4px rgba(0, 0, 0, 0.9),
+      0 0 10px rgba(0, 0, 0, 0.5),
+    2px 0 20px rgba(134, 87, 0, 0.3);
+    letter-spacing: 0.5px;
   }
   
   .auth-links {
